--- a/manifest-v2.json
+++ b/manifest-v2.json
@@ -24,7 +24,7 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "permissions": ["storage"],
+  "permissions": ["storage", "https://*"],
   "web_accessible_resources": [
     "css/comfortable-sakai.css",
     "img/logo.png",
