--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,9 @@
   "permissions": [
     "storage"
   ],
+  "host_permissions": [
+    "https://*/*"
+  ],
   "web_accessible_resources": [
     {
       "resources": [
